gitops/liberty-test-app-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: liberty-test-app
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
