gitops/liberty-test-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: liberty-test-app
  name: liberty-test-app
  namespace: liberty-test-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: liberty-test-app
